infra/k8s/base/analytics-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: analytics-service
  namespace: acmecorp
  labels:
    app: analytics-service
spec:
  type: ClusterIP
  selector:
    app: analytics-service
  ports:
    - port: 80
      targetPort: 8084
      name: http
