infra/k8s/base/billing-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: billing-service
  namespace: acmecorp
  labels:
    app: billing-service
spec:
  type: ClusterIP
  selector:
    app: billing-service
  ports:
    - port: 80
      targetPort: 8082
      name: http
