infra/k8s/base/catalog-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog-service
  namespace: acmecorp
  labels:
    app: catalog-service
spec:
  type: ClusterIP
  selector:
    app: catalog-service
  ports:
    - port: 80
      targetPort: 8085
      name: http
