infra/k8s/base/notification-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: acmecorp
  labels:
    app: notification-service
spec:
  type: ClusterIP
  selector:
    app: notification-service
  ports:
    - port: 80
      targetPort: 8083
      name: http
