infra/k8s/base/orders-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-service
  namespace: acmecorp
  labels:
    app: orders-service
spec:
  type: ClusterIP
  selector:
    app: orders-service
  ports:
    - port: 80
      targetPort: 8081
      name: http
